aws/vpn/security_group.tf
resource "aws_security_group" "vpnserver" {
  name   = "allow_ssh"
  vpc_id = aws_vpc.vpnserver.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "udp"
    cidr_blocks = ["0.0.0.0/0","::/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
